# phantom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt  imgui.ini
editor/panels/: hierarchy_panel.cpp  hierarchy_panel.h
editor/src/: BootstrapIconsFont.h  editor_app.cpp  editor_layer.cpp  editor_layer.h  game_layer.cpp  game_layer.h  hierarchy_layer.cpp  hierarchy_layer.h  scene_layer.cpp  scene_layer.h
phantom/: CMakeLists.txt
phantom/include/: phantom.h
phantom/src/: ph_pch.h
phantom/src/assets/: asset.h  asset_manager.h  asset_metadata.h  asset_registry.cpp  asset_registry.h  asset_types.h
phantom/src/assets/serializers/: asset_serializer.cpp  asset_serializer.h
phantom/src/core/: application.cpp  application.h  common.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.h  uuid.cpp  uuid.h  window.cpp  window.h
phantom/src/events/: application_event.h  event.h  key_event.h  mouse_event.h
phantom/src/gui/: gui_layer.cpp  gui_layer.h
phantom/src/gui/extensions/: extensions.h  toggle_button.cpp
phantom/src/gui/styles/: phantom_dark.cpp  phantom_light.cpp  styles.h
phantom/src/platform/opengl/: opengl_context.cpp  opengl_context.h  opengl_frame_buffer.cpp  opengl_frame_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h
phantom/src/renderer/: frame_buffer.cpp  frame_buffer.h  render_context.cpp  render_context.h  renderer.h  renderer_api.cpp  renderer_api.h  scene_renderer.h
phantom/src/scene/: scene.cpp  scene.h
phantom/src/scene/components/: mesh_component.h  name_component.h  transform_component.h
(+4 files in other folders)
